--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
   min-height: 100vh;
   min-height: 100svh;
   font-family: var(--app-font-family-primary, "sans-serif");
-  font-size:  var(--app-font-size-quaternary, 18px);
+  font-size: var(--app-font-size-quaternary, 18px);
   font-weight: 400;
 }
 
@@ -12,15 +12,15 @@ body {
   ) !important;
 }
 
-.offcanvas .offcanvas-body .nav-link{
+.offcanvas .offcanvas-body .nav-link {
   position: relative;
   font-size: var(--app-font-size-tertiary, 22px);
 }
-.offcanvas .offcanvas-body .nav-link::after{
+.offcanvas .offcanvas-body .nav-link::after {
   --caret-size: 0.7rem;
   --caret-width: 1px;
   --caret-color: rgb(var(--app-font-ligt-clr-secondary-rgb, #fff));
-  content: '';
+  content: "";
   position: absolute;
   width: var(--caret-size, 0.5rem);
   height: var(--caret-size, 0.5rem);
@@ -33,21 +33,21 @@ body {
   border-color: transparent var(--caret-color) var(--caret-color) transparent;
   border-style: solid;
 }
-.offcanvas .offcanvas-body .nav-link:is(:hover, :focus)::after{
+.offcanvas .offcanvas-body .nav-link:is(:hover, :focus)::after {
   --caret-color: rgb(var(--app-font-ligt-clr-primary-rgb, #fff));
 }
 
-
-
-.footer-subscribtion-form div.input-area{
+.footer-subscribtion-form div.input-area {
   position: relative;
 }
 
-.footer-subscribtion-form div.input-area input:is([type="text"], [type="email"]){
+.footer-subscribtion-form
+  div.input-area
+  input:is([type="text"], [type="email"]) {
   padding: 1.25rem;
 }
 
-.footer-subscribtion-form div.input-area button[type="submit"]{
+.footer-subscribtion-form div.input-area button[type="submit"] {
   width: max-content;
   position: absolute;
   top: 50%;
@@ -55,15 +55,89 @@ body {
   transform: translate(-10px, -50%);
 }
 
-.banner-image-area img{
+.banner-image-area img {
   max-width: 80vw;
   height: auto;
   min-height: 70vh;
 }
 
 /* Mobile View */
-@media screen and (max-width: 768px){
+@media screen and (max-width: 768px) {
   /* .banner-image-area img{
     min-height: 60vh;
   } */
+}
+
+/* contact page */
+.contact_golden_ratio {
+  display: block;
+  position: fixed;
+  height: 100vh;
+  right: 17%;
+  z-index: -1;
+}
+.contact_container {
+  padding: 100px 0px;
+}
+@media (max-width: 425px) {
+  .contact_container {
+    padding: 100px 10px;
+  }
+}
+.contact_form_container h1 {
+  font-family: "Trajan Pro";
+  font-weight: 700px;
+  font-size: 52px;
+  text-transform: uppercase;
+}
+.contact_from_input {
+  border: 1px solid #dedede;
+  border-radius: 9px;
+  padding: 20px;
+  background: transparent;
+}
+.contact_info_container {
+  background: #2b2b2b;
+  border-radius: 13px;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-items: center;
+  margin-top: 0px;
+}
+.contact_info_inner_container {
+  padding: 100px 50px;
+  max-width: 400px;
+  border: 1px solid #dedede;
+  border-radius: 9px;
+}
+@media (max-width: 768px) {
+  .contact_info_container {
+    margin-top: 50px;
+    padding: 0px 5px;
+  }
+  .contact_golden_ratio {
+    display: none;
+  }
+}
+@media (max-width: 425px) {
+  .contact_info_inner_container {
+    padding: 100px 20px;
+  }
+}
+.contact_info_inner_container h4 {
+  font-weight: 400;
+  font-size: 30px;
+}
+.contact_icon_point {
+  min-width: 28px;
+  min-height: 28px;
+  background: #a99b56;
+  display: grid;
+  place-items: center;
+  border-radius: 999px;
+}
+.contact_info_point {
+  font-weight: 400;
+  font-size: 18px;
 }
